--- a/functional-tests/Dockerfile
+++ b/functional-tests/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y wget && \
     wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list && \
     apt-get update && apt-get -y install google-chrome-stable python3-pip && \
-    pip3 install --user -r requirements.txt
+    pip3 install -r requirements.txt
 
 RUN export uid=1000 gid=1000 && \
     mkdir -p /home/developer && \
@@ -22,4 +22,4 @@ WORKDIR /home/developer
 
 COPY chromedriver .
 
-CMD export HOST_ADDRESS=$(ip r | sed 's/default via \(.*\) dev .*$/\1/g;t;d'); python3 functional_tests.py
+CMD export HOST_ADDRESS=$(ip r | sed 's/default via \(.*\) dev .*$/\1/g;t;d'); python3 functional-tests/functional_tests.py
