upgrade python in functional tests

--- a/functional-tests/Dockerfile
+++ b/functional-tests/Dockerfile
@@ -2,11 +2,13 @@ FROM ubuntu:14.04
 
 COPY requirements.txt .
 
-RUN apt-get update && apt-get install -y wget && \
+RUN apt-get update && apt-get install -y wget curl software-properties-common python-software-properties && \
     wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list && \
-    apt-get update && apt-get -y install google-chrome-stable python3-pip && \
-    pip3 install -r requirements.txt
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && apt-get -y install google-chrome-stable python3.6 && \
+    curl https://bootstrap.pypa.io/ez_setup.py -o - | python3.6 && python3.6 -m easy_install pip && \
+    pip install -r requirements.txt
 
 RUN export uid=1000 gid=1000 && \
     mkdir -p /home/developer && \
@@ -22,4 +24,4 @@ WORKDIR /home/developer
 
 COPY chromedriver .
 
-CMD cd app/; python3 manage.py test functional_tests
+CMD cd app/; python3.6 manage.py test functional_tests
