--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
 python:
   - "3.6"
+before_script:
+  - pip install codecov
+  - pip install -r web-app/requirements.txt
 script:
   - cd web-app &&
-    pip install -r requirements.txt &&
-    python manage.py test lists
+    coverage run lists
+after_success:
+  - codecov
