--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "3.6"
 before_script:
+  - pip install coverage
   - pip install -r web-app/requirements.txt
 script:
   - cd web-app &&
