--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ after_success:
   - bash <(curl -s https://codecov.onefootball.com/bash) -t $codecov_token
   - pwd
   - ls -la
-  - ../cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT --prefix $(pwd)
+  - ../cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT --prefix $(pwd) coverage.xml
